Upgrade to Proxmox 4 API

--- a/ProxmoxSharp/ProxmoxSharp.csproj
+++ b/ProxmoxSharp/ProxmoxSharp.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -50,8 +50,8 @@
     <Compile Include="Util\AppConfig.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
-    <Compile Include="Client\OpenvzCT.cs" />
-    <Compile Include="Client\OpenvzTemplate.cs" />
+    <Compile Include="Client\Lxc.cs" />
+    <Compile Include="Client\LxcTemplate.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -61,8 +61,5 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Client\" />
-    <Folder Include="Util\" />
-  </ItemGroup>
+  <ItemGroup />
 </Project>
